# AIMethod

./: .gitignore  Algorithm.hpp  CMakeLists.txt  CXSMethod.Define.h  Define.h  PoseEstimation.cpp  PoseEstimation.hpp  Ratiocinate.cpp  Ratiocinate.hpp  TargetDetection.cpp  TargetDetection.hpp  TargetSegmention.cpp  TargetSegmention.hpp  Tensor.cpp  Tensor.hpp  Tensor.natvis  Tools.CV.cpp  Tools.CV.hpp  Tools.cpp  Tools.hpp  build.sh  dynamic.py  main.cpp
onnx/: readme.txt
